--- a/01-Python Comparison Operators/01-Comparison Operators.ipynb
+++ b/01-Python Comparison Operators/01-Comparison Operators.ipynb
@@ -73,6 +73,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "temperature at 45 fahreneits is 7.22 celsius\n",
+      "temperature at 46 fahreneits is 7.78 celsius\n",
+      "temperature at 47 fahreneits is 8.33 celsius\n",
+      "temperature at 48 fahreneits is 8.89 celsius\n",
+      "temperature at 49 fahreneits is 9.44 celsius\n",
+      "temperature at 50 fahreneits is 10.0 celsius\n",
+      "temperature at 51 fahreneits is 10.56 celsius\n",
+      "temperature at 52 fahreneits is 11.11 celsius\n",
+      "temperature at 53 fahreneits is 11.67 celsius\n",
+      "temperature at 54 fahreneits is 12.22 celsius\n",
+      "temperature at 55 fahreneits is 12.78 celsius\n",
+      "temperature at 56 fahreneits is 13.33 celsius\n",
+      "temperature at 57 fahreneits is 13.89 celsius\n",
+      "temperature at 58 fahreneits is 14.44 celsius\n",
+      "temperature at 59 fahreneits is 15.0 celsius\n"
+     ]
+    }
+   ],
+   "source": [
+    "fahrenheit = list(range(45,60,1))\n",
+    "\n",
+    "celsius = [ 5/9 *(temp - 32) for temp in fahrenheit]\n",
+    "\n",
+    "celsiustofahreneit = list(zip(fahrenheit,celsius))\n",
+    "\n",
+    "for c,f in celsiustofahreneit: \n",
+    "    print('temperature at {} fahreneits is {} celsius'.format(c,round(f,2)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -379,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
