--- a/03-Methods and Functions/07-args and kwargs.ipynb
+++ b/03-Methods and Functions/07-args and kwargs.ipynb
@@ -257,6 +257,107 @@
     "\n",
     "That's it! Now you should understand how `*args` and `**kwargs` provide the flexibilty to work with arbitrary numbers of arguments!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc(*args):\n",
+    "    return sum(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 8]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even_list = [] \n",
+    "\n",
+    "def myfunc(*args):\n",
+    "    for num in args: \n",
+    "        if num % 2 == 0:\n",
+    "            even_list.append(num)\n",
+    "        else: \n",
+    "            pass \n",
+    "\n",
+    "    return even_list \n",
+    "\n",
+    "myfunc(5,6,7,8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myfunc(*args):\n",
+    "    return [n for n in args if n%2 == 0]\n",
+    "\n",
+    "print(myfunc(1,2,3,4,5,6,7,8,9,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aNtHrOmOrPhIsM'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def myfunc(words):\n",
+    "    answer=''\n",
+    "    for index,letter in enumerate(words): \n",
+    "        if index % 2 == 0: \n",
+    "            answer= answer + letter.lower()\n",
+    "        else:\n",
+    "            answer= answer + letter.upper()\n",
+    "    return answer \n",
+    "\n",
+    "myfunc('anthromorphism')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Alternate Method using lists\n",
+    "\n",
+    "astring=[]; \n",
+    "answer= ''\n",
+    "def myfunc(words):\n",
+    "    for index,letter in enumerate(words): \n",
+    "        if index % 2 == 0: \n",
+    "            astring.append(letter.lower()) \n",
+    "        else:\n",
+    "            astring.append(letter.upper()) \n",
+    "    return answer.join(astring) "
+   ]
   }
  ],
  "metadata": {
@@ -275,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
