--- a/02-Python Statements/06-List Comprehensions.ipynb
+++ b/02-Python Statements/06-List Comprehensions.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -35,6 +35,27 @@
    "source": [
     "# Grab every letter in string\n",
     "lst = [x for x in 'word']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['w', 'o', 'r', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Alternative for loop \n",
+    "lst2 = [] \n",
+    "for x in 'word':\n",
+    "    lst2.append(x)\n",
+    "print(lst2)"
    ]
   },
   {
@@ -82,6 +103,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Alternative for loop: this won't work when step size is greater than 1 \n",
+    "lst2= list(range(0,11,1))\n",
+    "for num in lst2:\n",
+    "    lst2[num]= num**2\n",
+    "lst2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Alternative for loop: but this creates another different list\n",
+    "lst3= []\n",
+    "lst2= list(range(0,11,1))\n",
+    "for num in lst2:\n",
+    "    lst3.append(num**2) \n",
+    "lst3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81, 100]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Alternative for loop \n",
+    "lst2= list(range(0,11,1))\n",
+    "for num in lst2:\n",
+    "    lst2.append(lst2.pop(0)**2)\n",
+    "lst2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -118,6 +212,33 @@
    "source": [
     "# Check for even numbers in a range\n",
     "lst = [x for x in range(11) if x % 2 == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#alternate longer way\n",
+    "lst=list(range(11)) \n",
+    "for x,y in enumerate(lst): \n",
+    "    if y % 2 == 0:\n",
+    "        pass\n",
+    "    else:\n",
+    "        lst.pop(x)\n",
+    "lst\n"
    ]
   },
   {
@@ -174,6 +295,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[32.0, 50.0, 68.18, 94.1]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "celsius = [0,10,20.1,34.5]\n",
+    "fahrenheit = [] \n",
+    "\n",
+    "for temp in celsius: \n",
+    "    fahrenheit.append(9/5*temp + 32)\n",
+    "fahrenheit"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -226,7 +372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
