--- a/02-Python Statements/07-Statements Assessment Test.ipynb
+++ b/02-Python Statements/07-Statements Assessment Test.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -42,13 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have found an 's' and the word is start\n",
+      "I have found an 's' and the word is s\n",
+      "I have found an 's' and the word is sentence\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code here"
+    "#Code here\n",
+    "st = 'Print only the words that start with s in this sentence'\n",
+    "for words in st.split(): \n",
+    "    if words[0] == 's':\n",
+    "        print(\"I have found an 's' and the word is {}\".format(words))"
    ]
   },
   {
@@ -61,13 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code Here"
+    "#Code Here\n",
+    "lst= [x for x in range(0,11) if x % 2 ==0]\n",
+    "lst"
    ]
   },
   {
@@ -80,14 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 6, 9, 12, 15, 18, 21, 24, 27, 30, 33, 36, 39, 42, 45, 48]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code in this cell\n",
-    "[]"
+    "lst= [x for x in range (1,51) if x % 3 ==0]\n",
+    "lst"
    ]
   },
   {
@@ -100,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -111,13 +150,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word\n",
+      "in\n",
+      "this\n",
+      "sentence\n",
+      "that\n",
+      "an\n",
+      "even\n",
+      "number\n",
+      "of\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "words= st.split()\n",
+    "for word in words: \n",
+    "    if len(word) % 2 == 0: \n",
+    "        print (word) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word\n",
+      "in\n",
+      "this\n",
+      "sentence\n",
+      "that\n",
+      "an\n",
+      "even\n",
+      "number\n",
+      "of\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst= [word for word in st.split() if len(word) % 2 == 0]\n",
+    "for item in lst:\n",
+    "  print(item)"
    ]
   },
   {
@@ -130,13 +216,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "Fizz\n",
+      "4\n",
+      "buzz\n",
+      "Fizz\n",
+      "7\n",
+      "8\n",
+      "Fizz\n",
+      "buzz\n",
+      "11\n",
+      "Fizz\n",
+      "13\n",
+      "14\n",
+      "FizzBuzz\n",
+      "16\n",
+      "17\n",
+      "Fizz\n",
+      "19\n",
+      "buzz\n",
+      "Fizz\n",
+      "22\n",
+      "23\n",
+      "Fizz\n",
+      "buzz\n",
+      "26\n",
+      "Fizz\n",
+      "28\n",
+      "29\n",
+      "FizzBuzz\n",
+      "31\n",
+      "32\n",
+      "Fizz\n",
+      "34\n",
+      "buzz\n",
+      "Fizz\n",
+      "37\n",
+      "38\n",
+      "Fizz\n",
+      "buzz\n",
+      "41\n",
+      "Fizz\n",
+      "43\n",
+      "44\n",
+      "FizzBuzz\n",
+      "46\n",
+      "47\n",
+      "Fizz\n",
+      "49\n",
+      "buzz\n",
+      "Fizz\n",
+      "52\n",
+      "53\n",
+      "Fizz\n",
+      "buzz\n",
+      "56\n",
+      "Fizz\n",
+      "58\n",
+      "59\n",
+      "FizzBuzz\n",
+      "61\n",
+      "62\n",
+      "Fizz\n",
+      "64\n",
+      "buzz\n",
+      "Fizz\n",
+      "67\n",
+      "68\n",
+      "Fizz\n",
+      "buzz\n",
+      "71\n",
+      "Fizz\n",
+      "73\n",
+      "74\n",
+      "FizzBuzz\n",
+      "76\n",
+      "77\n",
+      "Fizz\n",
+      "79\n",
+      "buzz\n",
+      "Fizz\n",
+      "82\n",
+      "83\n",
+      "Fizz\n",
+      "buzz\n",
+      "86\n",
+      "Fizz\n",
+      "88\n",
+      "89\n",
+      "FizzBuzz\n",
+      "91\n",
+      "92\n",
+      "Fizz\n",
+      "94\n",
+      "buzz\n",
+      "Fizz\n",
+      "97\n",
+      "98\n",
+      "Fizz\n",
+      "buzz\n"
+     ]
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "lst=range(1,101)\n",
+    "for num in lst: \n",
+    "    if num % 3 == 0 and num % 5 == 0:\n",
+    "        print('FizzBuzz') \n",
+    "    elif num % 3 == 0:\n",
+    "        print('Fizz')\n",
+    "    elif num % 5 == 0:\n",
+    "        print('buzz') \n",
+    "    else: \n",
+    "        print(num)\n"
    ]
   },
   {
@@ -149,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -160,13 +363,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Create', 'a', 'list', 'of', 'the', 'first', 'letters', 'of', 'every', 'word', 'in', 'this', 'string']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Code in this cell"
+    "#Code in this cell\n",
+    "words= st.split()\n",
+    "print(words) \n",
+    "lst= [word[0] for word in words] \n",
+    "lst"
    ]
   },
   {
@@ -193,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
