--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -31,8 +31,9 @@
    },
    "outputs": [],
    "source": [
+    "import math  \n",
     "def vol(rad):\n",
-    "    pass"
+    "    return 4/3 * math.pi * rad**3 "
    ]
   },
   {
@@ -43,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "33.49333333333333"
+       "33.510321638291124"
       ]
      },
      "execution_count": 2,
@@ -66,27 +67,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if num >= low and num <= high: \n",
+    "        return 'the number {} is between {} and {}'.format(num,low,high)\n",
+    "    else: \n",
+    "        return 'the number {} is not between {} and {}'.format(num,low,high)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'the number 5 is between 2 and 7'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -103,34 +110,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    if num>= low and num <= high: \n",
+    "        return True \n",
+    "    else: \n",
+    "        return False "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ran_bool(3,1,10)"
+    "ran_bool(11,1,10)"
    ]
   },
   {
@@ -152,29 +162,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    chr_upper= 0\n",
+    "    chr_lower= 0\n",
+    "    for letter in s:\n",
+    "        if letter.isupper(): \n",
+    "            chr_upper += 1 \n",
+    "        else: \n",
+    "            chr_lower += 1\n",
+    "    return 'No. of Upper case characters = {}'.format(chr_upper), 'No. of Lower case characters = {}'.format(chr_lower)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
-     ]
+     "data": {
+      "text/plain": [
+       "('No. of Upper case characters = 4', 'No. of Lower case characters = 44')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -195,19 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    unique_lst=[]\n",
+    "    for item in lst: \n",
+    "        if item not in unique_lst: \n",
+    "            unique_lst.append(item)\n",
+    "    return unique_lst"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +238,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,19 +260,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def multiply(numbers):  \n",
-    "    pass"
+    "    output= 1 \n",
+    "    for num in numbers: \n",
+    "        output= output*num \n",
+    "    return output   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import prod \n",
+    "def multiply_library(hackynums):  \n",
+    "    return prod(hackynums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -259,13 +295,33 @@
        "-24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "multiply([1,2,3,-4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-24"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiply_library([1,2,3,-4])"
    ]
   },
   {
@@ -280,19 +336,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    if s == s[::-1]: \n",
+    "        return True \n",
+    "    else: \n",
+    "        return False "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +360,13 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('naman')"
    ]
   },
   {
@@ -331,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -340,12 +399,18 @@
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    lst= [letter.lower() for letter in str1]\n",
+    "    without_empty_strings = [string for string in lst if string != \" \"]\n",
+    "    without_empty_strings.sort() \n",
+    "    if set(alphabet)== set(without_empty_strings): \n",
+    "        return True \n",
+    "    else: \n",
+    "        return False "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -354,18 +419,18 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ispangram(\"The quick brown fox jumps over the lazy dog\")"
+    "ispangram(\"Sphinx of black quartz judge my vow\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +439,7 @@
        "'abcdefghijklmnopqrstuvwxyz'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
