--- a/04-Milestone Project - 1/Milestone Project 1- Final.ipynb
+++ b/04-Milestone Project - 1/Milestone Project 1- Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_board(dictMoves, lst):\n",
-    "    print(\"index numbers {} are the positions available to make a move\".format(lst))\n",
+    "def check_mark_status(mark): \n",
+    "    if mark in ['O','X']: \n",
+    "        return True\n",
+    "    else: \n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display_board(dictMoves):\n",
     "    print(\"        |        |        \")\n",
     "    print(\"   {}    |   {}    |   {}    \".format(dictMoves['1'],dictMoves['2'],dictMoves['3']))\n",
     "    print(\"________|________|________\")\n",
@@ -39,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,44 +70,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "symbol = 'O'\n",
-    "#dictMoves = {'1':'X','2':'O','3':'X', '4':'O','5':'O', '6':'O', '7':'O', '8':8, '9':9}\n",
-    "dictMoves = {'1':1,'2':2,'3':3, '4':4,'5':5, '6':6, '7':7, '8':8, '9':9}\n",
-    "print(check_winner(dictMoves, symbol))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def player_moves(name, dictMoves,mark,lst):\n",
-    "    moveValue= input('{}, where would you like to play {}'.format(name, lst))\n",
-    "    print('{} you have selected index position {} in the array to make your move'.format(name, moveValue))\n",
-    "    if moveValue not in lst: \n",
-    "        print('You did not enter a valid position') \n",
-    "    else: \n",
-    "        dictMoves[moveValue]= mark \n",
-    "        lst.remove(moveValue)\n",
-    "        return dictMoves "
+    "def player_moves(name, dictMoves,mark,lst,moveValue=10):\n",
+    "    while moveValue not in lst: \n",
+    "        moveValue= input('{}, where would you like to play {}'.format(name, lst))\n",
+    "        if moveValue in lst: \n",
+    "            print('{} you have selected index position {} in the array to make your move'.format(name, moveValue))\n",
+    "            dictMoves[moveValue]= mark \n",
+    "            lst.remove(moveValue)\n",
+    "            return dictMoves\n",
+    "        else: \n",
+    "            print('{}, you have entered an invalid position! Please try again!'.format(name)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,61 +96,183 @@
     "    while check_game_status(): \n",
     "        name1= str(input(\"Player 1, what's your name \"))\n",
     "        name2= str(input(\"Player 2, what's your name \"))\n",
-    "        mark= str(input(\"{}, would you like to be 'O' or 'X' \".format(name1))).upper()\n",
     "        dictMoves = {'1':1,'2':2,'3':3, '4':4,'5':5, '6':6, '7':7, '8':8, '9':9}\n",
     "        lst= [str(x) for x in range(1,10)]\n",
-    "\n",
-    "        if mark in ['O','X']: \n",
+    "        mark= 'Hello123'\n",
+    "        \n",
+    "        while check_mark_status(mark)==False: \n",
+    "            \n",
+    "            mark= str(input(\"{}, would you like to be 'O' or 'X' \".format(name1))).upper()\n",
+    "        \n",
     "            if mark == 'O': \n",
     "                rule = {name1:'O',name2:'X'}\n",
     "                print('{} you make the first move because you are {}'.format(name1,rule[name1]))\n",
     "                print('{} you are {} and will go next'.format(name2,rule[name2]))\n",
     "                turnCount=True\n",
-    "            else: \n",
+    "\n",
+    "            elif mark == 'X': \n",
     "                rule = {name1:'X',name2:'O'}\n",
     "                print('{} you make the first move because you are {}'.format(name2, rule[name2]))\n",
     "                print('{} you are {} and will go next'.format(name1,rule[name1]))\n",
     "                turnCount=False\n",
     "\n",
-    "        display_board(dictMoves,lst) \n",
-    "\n",
+    "            else: \n",
+    "                print('Invalid Symbol, Please try again')\n",
+    "        \n",
     "        while check_winner(dictMoves,rule[name1]) == False and check_winner(dictMoves, rule[name2]) == False: \n",
     "            if turnCount == True: \n",
+    "                display_board(dictMoves)\n",
     "                name= name1 \n",
     "                dictMoves= player_moves(name,dictMoves,rule[name1],lst)\n",
-    "                display_board(dictMoves,lst) \n",
     "                turnCount=False\n",
+    "            elif lst== []: \n",
+    "                print('the game is a draw')\n",
+    "                break\n",
     "            else : \n",
-    "                display_board(dictMoves,lst)\n",
+    "                display_board(dictMoves)\n",
     "                name= name2\n",
     "                dictMoves= player_moves(name,dictMoves,rule[name2],lst)\n",
-    "                display_board(dictMoves,lst) \n",
     "                turnCount=True\n",
     "\n",
     "        if check_winner(dictMoves, rule[name1]) == True: \n",
-    "            print('{} you are the winner'.format(name1))\n",
+    "            print('{} you are the winner, see the final result'.format(name1))\n",
     "\n",
-    "        else: \n",
-    "            print('{} you are the winner'.format(name2))\n",
-    "        \n",
-    "        check_game_status()"
+    "        if check_winner(dictMoves, rule[name2]) == True: \n",
+    "            print('{} you are the winner, see the final result'.format(name2))\n",
+    "            \n",
+    "        display_board(dictMoves)\n",
+    "\n",
+    "    print('Hope you come back again')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorry you did not select 'Y' or 'N'\n"
+      "Invalid Symbol, Please try again\n",
+      "Invalid Symbol, Please try again\n",
+      "Invalid Symbol, Please try again\n",
+      "Invalid Symbol, Please try again\n",
+      "Aditya you make the first move because you are O\n",
+      "Udayan you are X and will go next\n",
+      "        |        |        \n",
+      "   1    |   2    |   3    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   4    |   5    |   6    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   8    |   9   \n",
+      "        |        |        \n",
+      "Aditya, you have entered an invalid position! Please try again!\n",
+      "Aditya you have selected index position 2 in the array to make your move\n",
+      "        |        |        \n",
+      "   1    |   O    |   3    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   4    |   5    |   6    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   8    |   9   \n",
+      "        |        |        \n",
+      "Udayan, you have entered an invalid position! Please try again!\n",
+      "Udayan you have selected index position 3 in the array to make your move\n",
+      "        |        |        \n",
+      "   1    |   O    |   X    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   4    |   5    |   6    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   8    |   9   \n",
+      "        |        |        \n",
+      "Aditya you have selected index position 5 in the array to make your move\n",
+      "        |        |        \n",
+      "   1    |   O    |   X    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   4    |   O    |   6    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   8    |   9   \n",
+      "        |        |        \n",
+      "Udayan, you have entered an invalid position! Please try again!\n",
+      "Udayan you have selected index position 8 in the array to make your move\n",
+      "        |        |        \n",
+      "   1    |   O    |   X    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   4    |   O    |   6    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   X    |   9   \n",
+      "        |        |        \n",
+      "Aditya you have selected index position 6 in the array to make your move\n",
+      "        |        |        \n",
+      "   1    |   O    |   X    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   4    |   O    |   O    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   X    |   9   \n",
+      "        |        |        \n",
+      "Udayan you have selected index position 4 in the array to make your move\n",
+      "        |        |        \n",
+      "   1    |   O    |   X    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   X    |   O    |   O    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   X    |   9   \n",
+      "        |        |        \n",
+      "Aditya, you have entered an invalid position! Please try again!\n",
+      "Aditya you have selected index position 1 in the array to make your move\n",
+      "        |        |        \n",
+      "   O    |   O    |   X    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   X    |   O    |   O    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   X    |   9   \n",
+      "        |        |        \n",
+      "Udayan, you have entered an invalid position! Please try again!\n",
+      "Udayan you have selected index position 9 in the array to make your move\n",
+      "        |        |        \n",
+      "   O    |   O    |   X    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   X    |   O    |   O    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   7    |   X    |   X   \n",
+      "        |        |        \n",
+      "Aditya you have selected index position 7 in the array to make your move\n",
+      "the game is a draw\n",
+      "Udayan you are the winner, see the final result\n",
+      "        |        |        \n",
+      "   O    |   O    |   X    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   X    |   O    |   O    \n",
+      "________|________|________\n",
+      "        |        |        \n",
+      "   O    |   X    |   X   \n",
+      "        |        |        \n",
+      "Sorry you did not select 'Y' or 'N'\n",
+      "Hope you come back again\n"
      ]
     }
    ],
    "source": [
-    "main_game_function() "
+    "main_game_function()"
    ]
   }
  ],
